--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,14 +30,20 @@
     <string name="notification_channel_name">HKBEA_MPF</string>
 
     <string name="SHARED_PREF_FILE_PUSH_SERVICE_SETTING">BEA Push Service Setting</string>
-    <string name="SHARED_PREF_KEY_TOKEN">DeviceToken</string>
-    <string name="SHARED_PREF_KEY_INBOX_SHARED_PREF_KEY_ARN">ARN</string>
+    <string name="SHARED_PREF_KEY_Token">DeviceToken</string>
+    <string name="SHARED_PREF_KEY_App_Ref_ID">App_Ref_ID</string>
+    <string name="SHARED_PREF_KEY_Create_Datetime">create_datetime</string>
+
     <string name="SHARED_PREF_FILE_INBOX_RECORD">BEA Inbox Record</string>
-    <string name="SHARED_PREF_KEY_INBOX_RECORD">InboxRecord</string>
+    <string name="SHARED_PREF_KEY_Inbox_Record">InboxRecord</string>
 
     <string name="NOTIFICATION_STYLE_Normal">N</string>
     <string name="NOTIFICATION_STYLE_Reply">R</string>
     <string name="NOTIFICATION_STYLE_Action">A</string>
+
+    <string name="AWS_ApiGateway">2yatizitfg</string>
+    <string name="AWS_Region">ap-northeast-1</string>
+    <string name="AWS_Stage">Dev</string>
 
     //Common
     <string name="COMMON_COPIED">Copied</string>
