--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="SHARED_PREF_FILE_PUSH_SERVICE_SETTING">BEA Push Service Setting</string>
     <string name="SHARED_PREF_KEY_Token">DeviceToken</string>
     <string name="SHARED_PREF_KEY_App_Ref_ID">App_Ref_ID</string>
-    <string name="SHARED_PREF_KEY_Create_Datetime">create_datetime</string>
+    <string name="SHARED_PREF_KEY_Access_Datetime">access_datetime</string>
 
     <string name="SHARED_PREF_FILE_INBOX_RECORD">BEA Inbox Record</string>
     <string name="SHARED_PREF_KEY_Inbox_Record">InboxRecord</string>
@@ -41,7 +41,7 @@
     <string name="NOTIFICATION_STYLE_Reply">R</string>
     <string name="NOTIFICATION_STYLE_Action">A</string>
 
-    <string name="AWS_ApiGateway">2yatizitfg</string>
+    <string name="AWS_ApiGateway">klb4ptx1v5</string>
     <string name="AWS_Region">ap-northeast-1</string>
     <string name="AWS_Stage">Dev</string>
 
